# CurriculumDesign_BookManagementSystem

doc/: origin.md
src/: Sales.cpp
v1.0/: CMakeLists.txt
v1.0/doc/: origin.md
v2.0/: CMakeLists.txt  README.md
v2.0/data/: books_sample.txt  sales_sample.txt
v2.0/docs/: design.md  development.md  project_summary.md  user_manual.md
v2.0/include/: Book.h  BookManager.h  FileManager.h  MainWindow.h  SaleRecord.h  SalesManager.h  StatisticsManager.h
v2.0/src/: Book.cpp  BookManager.cpp  ConsoleUI.cpp  FileManager.cpp  SaleRecord.cpp  SalesManager.cpp  StatisticsManager.cpp  main.cpp  test.cpp
v3.0/: CMakeLists.txt  core_classes_design.md  debugging_plan.md  implementation_plan.md  project_structure.md  system_design.md
v3.0/doc/: C++课程设计报告.docx  Guorui Li_C++课程设计报告模板.docx  PIA课程项目报告.docx  PIA课设答辩.pptx  SSTC-PIA-课程项目报告模板及示例.docx  SilverWolf.md  ~$A课程项目报告.docx  ~$TC-PIA-课程项目报告模板及示例.docx
v3.0/include/: Book.h  BookManager.h  MainWindow.h  SaleSys.h  SalesSystem.h  StatisSys.h  StatisticsSystem.h
v3.0/src/: Book.cpp  BookManager.cpp  MainWindow.cpp  SaleSys.cpp  SalesSystem.cpp  StatisSys.cpp  StatisticsSystem.cpp  main.cpp
